# snake-game

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: D3D11_PixelShader_Advanced.h.4D75F10E69725008.idx  D3D11_PixelShader_Colors.h.73C7767B36ABE66E.idx  D3D11_PixelShader_Textures.h.642E0683593E7000.idx  D3D11_VertexShader.h.078A9329FAAC99B7.idx  D3D12_Blit.h.153539EC27972EE8.idx  D3D12_PixelShader_Advanced.h.4744F47D050A8C2F.idx  D3D12_PixelShader_Colors.h.3E37E1F1D9F3ADCF.idx  D3D12_PixelShader_Textures.h.FE3F2C7D8D25AD8F.idx  D3D12_RootSig_Advanced.h.E917B1107974EF9D.idx  D3D12_RootSig_Color.h.A226F9995DA22305.idx  D3D12_RootSig_Texture.h.47B6DE8F42B6577B.idx  D3D12_VertexShader_Advanced.h.59B2F3A5812DE2EA.idx  D3D12_VertexShader_Color.h.BABDF64AADBE524B.idx  D3D12_VertexShader_Texture.h.33E1A67973BC053B.idx  D3D9_PixelShader_YUV.h.8A710C2791B7FBF8.idx  SDL.c.2075621825B97F7C.idx  SDL.h.9325592E81A45239.idx  SDL_RLEaccel.c.A08F4EC5AA41E823.idx  SDL_RLEaccel_c.h.57BAD35B30FA576F.idx  SDL_assert.c.3953BE258AEC6F7B.idx  SDL_assert.h.85E9115D8D061E3D.idx  SDL_assert_c.h.5FBC288A7662FD14.idx  SDL_asyncio.c.A78C1EC391870E26.idx  SDL_asyncio.h.CF14F4CBA6F800A7.idx  SDL_asyncio_c.h.774A8E4E0A199840.idx  SDL_asyncio_generic.c.8AAEB2D7627DF9A4.idx  SDL_asyncio_windows_ioring.c.81609F9909C6A330.idx  SDL_atomic.c.0E25E2D58A497676.idx  SDL_atomic.h.38DD844D633EBD90.idx  SDL_audio.c.C1FF0E75D8BBECDB.idx  SDL_audio.h.08639CC31D449A61.idx  SDL_audio_c.h.1F39399A81B9BBFB.idx  SDL_audio_channel_converters.h.42F5E88033F152D4.idx  SDL_audiocvt.c.22E71AB9BAE595C9.idx  SDL_audiodev.c.67EAC25E4247ABC7.idx  SDL_audioqueue.c.659FC7E39D76A822.idx  SDL_audioqueue.h.920F4CB873781548.idx  SDL_audioresample.c.20D4309F6A8B583C.idx  SDL_audioresample.h.1046842096EBE944.idx  SDL_audiotypecvt.c.F693449E95A9EA23.idx  (+559 more)
src/: main.cpp  utils.h
